--- a/bar-chart-svg/index.html
+++ b/bar-chart-svg/index.html
@@ -13,6 +13,6 @@
 </style>
 
 <svg class="chart"/>
-<script src="d3.min.js" charset="utf-8"></script>
+<script src="../d3.min.js" charset="utf-8"></script>
 <script src="index.js" charset="utf-8"></script>
 
