--- a/bar-chart/index.html
+++ b/bar-chart/index.html
@@ -12,6 +12,6 @@
 </style>
 
 <div class="chart"/>
-<script src="d3.min.js" charset="utf-8"></script>
+<script src="../d3.min.js" charset="utf-8"></script>
 <script src="index.js" charset="utf-8"></script>
 
